test_dir/logs_backup/gcc/00.1/open_gcc_2016-12-01-17:05:41.txt
--------------------------------------------------------------------------------------------
seed: 13471
In file included from blaster.c:16:0:
shared.h:1:24: fatal error: /usr/include/x86_64-linux-gnu/sys/socket.h: Permission denied
 #include <sys/socket.h>
                        ^
compilation terminated.
seed: 13471
seed: 13471
seed: 13471
seed: 13471
In file included from shared.c:11:0:
shared.h:1:24: fatal error: /usr/include/x86_64-linux-gnu/sys/socket.h: Permission denied
 #include <sys/socket.h>
                        ^
compilation terminated.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 20595
blaster.c:16:20: fatal error: shared.h: Permission denied
 #include "shared.h"
                    ^
compilation terminated.
seed: 20595
seed: 20595
seed: 20595
seed: 20595
shared.c:11:20: fatal error: shared.h: Permission denied
 #include "shared.h"
                    ^
compilation terminated.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 26985
cc1: fatal error: /usr/local/include/stdc-predef.h: Permission denied
compilation terminated.
seed: 26985
seed: 26985
seed: 26985
seed: 26985
cc1: fatal error: /usr/local/include/stdc-predef.h: Permission denied
compilation terminated.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 9018
blaster.c:16:20: fatal error: shared.h: Permission denied
 #include "shared.h"
                    ^
compilation terminated.
seed: 9018
seed: 9018
seed: 9018
seed: 9018
shared.c:11:20: fatal error: shared.h: Permission denied
 #include "shared.h"
                    ^
compilation terminated.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 23627
In file included from shared.h:1:0,
                 from blaster.c:16:
/usr/include/x86_64-linux-gnu/sys/socket.h:22:22: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include-fixed/features.h: Permission denied
 #include <features.h>
                      ^
compilation terminated.
seed: 23627
seed: 23627
seed: 23627
seed: 23627
In file included from shared.h:1:0,
                 from shared.c:11:
/usr/include/x86_64-linux-gnu/sys/socket.h:22:22: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include-fixed/features.h: Permission denied
 #include <features.h>
                      ^
compilation terminated.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 30013
cc1: fatal error: /usr/include/x86_64-linux-gnu/stdc-predef.h: Permission denied
compilation terminated.
seed: 30013
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 30013
cc1: fatal error: /usr/include/x86_64-linux-gnu/stdc-predef.h: Permission denied
compilation terminated.
seed: 30013
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 5214
In file included from /usr/include/x86_64-linux-gnu/sys/socket.h:22:0,
                 from shared.h:1,
                 from blaster.c:16:
/usr/include/features.h:398:23: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include/gnu/stubs.h: Permission denied
 #include <gnu/stubs.h>
                       ^
compilation terminated.
seed: 5214
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 5214
In file included from /usr/include/x86_64-linux-gnu/sys/socket.h:22:0,
                 from shared.h:1,
                 from shared.c:11:
/usr/include/features.h:398:23: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include/gnu/stubs.h: Permission denied
 #include <gnu/stubs.h>
                       ^
compilation terminated.
seed: 5214
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 11506
blaster.c:16:20: fatal error: shared.h: Permission denied
 #include "shared.h"
                    ^
compilation terminated.
seed: 11506
seed: 11506
seed: 11506
seed: 11506
shared.c:11:20: fatal error: shared.h: Permission denied
 #include "shared.h"
                    ^
compilation terminated.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 17922
cc1: fatal error: /usr/include/x86_64-linux-gnu/stdc-predef.h: Permission denied
compilation terminated.
seed: 17922
seed: 17922
seed: 17922
seed: 17922
cc1: fatal error: /usr/include/x86_64-linux-gnu/stdc-predef.h: Permission denied
compilation terminated.
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 22457
cc1: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include/stdc-predef.h: Permission denied
compilation terminated.
seed: 22457
seed: 22457
seed: 22457
seed: 22457
cc1: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include/stdc-predef.h: Permission denied
compilation terminated.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 29129
In file included from shared.h:1:0,
                 from blaster.c:16:
/usr/include/x86_64-linux-gnu/sys/socket.h:22:22: fatal error: /usr/include/features.h: Permission denied
 #include <features.h>
                      ^
compilation terminated.
seed: 29129
seed: 29129
seed: 29129
seed: 29129
In file included from shared.h:1:0,
                 from shared.c:11:
/usr/include/x86_64-linux-gnu/sys/socket.h:22:22: fatal error: /usr/include/features.h: Permission denied
 #include <features.h>
                      ^
compilation terminated.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 21261
cc1: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include/stdc-predef.h: Permission denied
compilation terminated.
seed: 21261
seed: 21261
seed: 21261
seed: 21261
cc1: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include/stdc-predef.h: Permission denied
compilation terminated.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 13374
In file included from /usr/include/features.h:374:0,
                 from /usr/include/x86_64-linux-gnu/sys/socket.h:22,
                 from shared.h:1,
                 from blaster.c:16:
/usr/include/x86_64-linux-gnu/sys/cdefs.h:385:27: fatal error: /usr/include/x86_64-linux-gnu/bits/wordsize.h: Permission denied
 #include <bits/wordsize.h>
                           ^
compilation terminated.
seed: 13374
seed: 13374
seed: 13374
seed: 13374
In file included from /usr/include/features.h:374:0,
                 from /usr/include/x86_64-linux-gnu/sys/socket.h:22,
                 from shared.h:1,
                 from shared.c:11:
/usr/include/x86_64-linux-gnu/sys/cdefs.h:385:27: fatal error: /usr/include/x86_64-linux-gnu/bits/wordsize.h: Permission denied
 #include <bits/wordsize.h>
                           ^
compilation terminated.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 26669
In file included from blaster.c:16:0:
shared.h:1:24: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include-fixed/sys/socket.h: Permission denied
 #include <sys/socket.h>
                        ^
compilation terminated.
seed: 26669
seed: 26669
seed: 26669
seed: 26669
In file included from shared.c:11:0:
shared.h:1:24: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include-fixed/sys/socket.h: Permission denied
 #include <sys/socket.h>
                        ^
compilation terminated.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 31421
cc1: fatal error: /usr/local/include/stdc-predef.h: Permission denied
compilation terminated.
seed: 31421
seed: 31421
seed: 31421
seed: 31421
cc1: fatal error: /usr/local/include/stdc-predef.h: Permission denied
compilation terminated.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 17497
In file included from /usr/include/features.h:374:0,
                 from /usr/include/x86_64-linux-gnu/sys/socket.h:22,
                 from shared.h:1,
                 from blaster.c:16:
/usr/include/x86_64-linux-gnu/sys/cdefs.h:385:27: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include/bits/wordsize.h: Permission denied
 #include <bits/wordsize.h>
                           ^
compilation terminated.
seed: 17497
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 17497
In file included from /usr/include/features.h:374:0,
                 from /usr/include/x86_64-linux-gnu/sys/socket.h:22,
                 from shared.h:1,
                 from shared.c:11:
/usr/include/x86_64-linux-gnu/sys/cdefs.h:385:27: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include/bits/wordsize.h: Permission denied
 #include <bits/wordsize.h>
                           ^
compilation terminated.
seed: 17497
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 20937
cc1: fatal error: blaster.c: Permission denied
compilation terminated.
seed: 20937
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 20937
cc1: fatal error: shared.c: Permission denied
compilation terminated.
seed: 20937
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 7740
In file included from /usr/include/x86_64-linux-gnu/sys/types.h:29:0,
                 from /usr/include/x86_64-linux-gnu/sys/uio.h:23,
                 from /usr/include/x86_64-linux-gnu/sys/socket.h:26,
                 from shared.h:1,
                 from blaster.c:16:
/usr/include/x86_64-linux-gnu/bits/types.h:121:62: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include-fixed/bits/typesizes.h: Permission denied
 #include <bits/typesizes.h> /* Defines __*_T_TYPE macros.  */
                                                              ^
compilation terminated.
seed: 7740
seed: 7740
seed: 7740
seed: 7740
In file included from /usr/include/x86_64-linux-gnu/sys/types.h:29:0,
                 from /usr/include/x86_64-linux-gnu/sys/uio.h:23,
                 from /usr/include/x86_64-linux-gnu/sys/socket.h:26,
                 from shared.h:1,
                 from shared.c:11:
/usr/include/x86_64-linux-gnu/bits/types.h:121:62: fatal error: /usr/lib/gcc/x86_64-linux-gnu/4.8/include-fixed/bits/typesizes.h: Permission denied
 #include <bits/typesizes.h> /* Defines __*_T_TYPE macros.  */
                                                              ^
compilation terminated.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 6329
In file included from shared.h:1:0,
                 from blaster.c:16:
/usr/include/x86_64-linux-gnu/sys/socket.h:22:22: fatal error: /usr/include/x86_64-linux-gnu/features.h: Permission denied
 #include <features.h>
                      ^
compilation terminated.
seed: 6329
seed: 6329
seed: 6329
seed: 6329
In file included from shared.h:1:0,
                 from shared.c:11:
/usr/include/x86_64-linux-gnu/sys/socket.h:22:22: fatal error: /usr/include/x86_64-linux-gnu/features.h: Permission denied
 #include <features.h>
                      ^
compilation terminated.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 16318
cc1: fatal error: blaster.c: Permission denied
compilation terminated.
seed: 16318
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 16318
cc1: fatal error: shared.c: Permission denied
compilation terminated.
seed: 16318
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
